# signal

./: .gitignore  LICENSE  README.md  docker-compose.yml  docker-stack.yml  signal-prd.md  tracked.md
.github/workflows/: docker.yml
backend/: .env.example  pyproject.toml
backend/src/signal_app/: config.py  db.py  main.py  models.py
backend/src/signal_app/discovery/: youtube.py
backend/src/signal_app/fetchers/: __init__.py  arxiv.py  base.py  bluesky.py  github.py  hackernews.py  reddit.py  rss.py  twitter.py  youtube.py
backend/src/signal_app/pipeline/: __init__.py  dedup.py  orchestrator.py  scheduler.py  summarizer.py
backend/src/signal_app/routes/: categories.py  discovery.py  health.py  items.py  pipeline.py  reviews.py  settings.py  sources.py
backend/src/signal_app/weekly/: generator.py
backend/tests/: conftest.py  test_config.py  test_dedup.py  test_fetcher_registry.py  test_fetchers.py  test_models.py  test_weekly_generator.py
design/: 01-layout-shell-and-digest.md  02-sources.md  03-weekly-review.md  04-discovery.md  05-settings.md  06-quick-add-modal.md  07-source-detail.md  signal.pen
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
docker/postgres/: init.sql
docs/: api.md  architecture.md  pipeline.md  setup.md  sources.md
frontend/: .cta.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/lib/: api.ts  mock-data.ts  types.ts
frontend/src/routes/: __root.tsx  discovery.index.tsx  index.tsx  review.index.tsx  settings.index.tsx  sources.$sourceId.tsx  (+1 more)
(+6 files in other folders)
